--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ex003",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://swmm-js.github.io/swmmjs",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
@@ -18,6 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -49,6 +52,7 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
+    "gh-pages": "^3.2.3",
     "webpack-cli": "^4.9.1"
   }
 }
