--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ex003",
+  "name": "swmm-js",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://swmm-js.github.io/swmmjs",
@@ -43,7 +43,7 @@
       "last 1 safari version"
     ]
   },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "description": "swmm-js demo app.",
   "main": "index.js",
   "keywords": [],
   "author": "",
