--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "private": true,
   "homepage": "http://swmm-js.github.io/swmmjs",
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/x-data-grid": "^5.2.2",
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "chart": "^0.1.2",
+    "material-table": "^1.69.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.8",
     "serve": "^13.0.2",
     "web-vitals": "^1.1.2"
   },
